FIX: move stopwatch z index to the top
This prevents anything from covering it.

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   padding: 0.5rem;
   font-size: 1.25rem;
   background-color: hsl(0 0 3 / 70%);
+  z-index: 999;
 }
 
 img {
